--- a/app/views/abouts/_main_home.html.haml
+++ b/app/views/abouts/_main_home.html.haml
@@ -4,11 +4,11 @@
       %p.abtop
         About
       %h4.abdown
-        Home Fit
+        Home Life
     .abmain_center--content
       .abmain_center--content--box
         %h1.abtitle
-          Home Fit
+          Home Life
         %p.abcontent
           今回は、カリキュラムの復習も兼ねて、主に学んできた言語を使いながら作成しました。悩んでも時間の無駄なので、主観的に考えた結果、自分自身の夢の１つをテーマにしました。
         %p.abcontent
