--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,5 +1,5 @@
 .login
-  %h2 HomeFit
+  %h2 HomeLife
   %h4 Create Account
   = render "devise/shared/links"
 
@@ -32,4 +32,3 @@
 
   %a.forgot{:href => "#"} Already have an account?
   %h6 (Passwordは英数字8文字以上)
-
