--- a/app/views/homes/_footer.html.haml
+++ b/app/views/homes/_footer.html.haml
@@ -1,7 +1,7 @@
 .main_footer
   .main_footer__left
     %h2.main_footer_title
-      Home Fit
+      Home Life
     %p.footer_name
       © 2020~ Takei_Kazaki, Inc.
   .main_footer__right
