--- a/app/views/homes/new.html.haml
+++ b/app/views/homes/new.html.haml
@@ -2,7 +2,7 @@
   = form_for [@home] do |f|
     .add-item__header
       = link_to root_path, class: "buy-items__header--logo" do
-        = image_tag "fmarket_logo_red.svg", class: "buy-items__header--logo", alt:"logo"
+        -# = image_tag "fmarket_logo_red.svg", class: "buy-items__header--logo", alt:"logo"
     .add-item__main
     
       .add-item__main--top
@@ -57,6 +57,6 @@
     .add-item__footer
       .add-item__footer__list
       = link_to root_path, class: "buy-items__footer__logo" do
-        = image_tag "logo_gray.svg", class: ".buy-items__footer__logo"
+        -# = image_tag "logo_gray.svg", class: ".buy-items__footer__logo"
       .add-item__footer__text
         © 2020~ Takei_Kazaki, Inc.
