--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,5 +1,5 @@
 .login
-  %h2 HomeFit
+  %h2 HomeLife
   %h4 Edit Account
   = render "devise/shared/links"
   = link_to "トップページに戻る", :back, class: 'btn'
