--- a/app/assets/stylesheets/_account.scss
+++ b/app/assets/stylesheets/_account.scss
@@ -78,6 +78,7 @@
       height: 30px;
       width: 290px;
       padding-top: 3px;
+      margin-right: 3px;
     }
     .titleac{
       color: green;
