--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -88,6 +88,7 @@
       height: 30px;
       width: 290px;
       padding-top: 3px;
+      margin-right: 3px;
     }
     .username{
       text-align: center;
