--- a/app/assets/stylesheets/_about.scss
+++ b/app/assets/stylesheets/_about.scss
@@ -80,6 +80,7 @@
       height: 30px;
       width: 290px;
       padding-top: 3px;
+      margin-right: 3px;
     }
     .titleab{
       color: orange;
