--- a/app/assets/stylesheets/_home-indexes.scss
+++ b/app/assets/stylesheets/_home-indexes.scss
@@ -73,6 +73,7 @@
       height: 30px;
       width: 290px;
       padding-top: 3px;
+      margin-right: 3px;
     }
     .titleim{
       color: red;
