--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,7 @@
 @import "./account";
 @import "./home-indexes";
 @import "./newhome";
+@import "./showhome";
 @import "font-awesome-sprockets";
 @import "./font-awesome";
 @import "bootstrap";
