--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -250,7 +250,7 @@
               text-decoration: none;
               border-radius: 5px;
               cursor: pointer;
-              padding: 7px 10px;
+              padding: 7px 15px;
               border-image: initial;
               transition: all 0.5s ease-out 0s;
               &:hover {
@@ -414,9 +414,10 @@
     z-index: 10;
     font-size: 14px;
     top: 30%;
-    .line__btn{
+    .line__newbtn{
       text-align: center;
       padding-left: 7px;
+      width: 60px;
       &__li{
         text-decoration: none;
         color: white;
@@ -449,6 +450,17 @@
             }
           }
         }
+      }
+    }
+    .line__btn{
+      text-align: center;
+      padding-left: 7px;
+      width: 40px;
+      &__li{
+        text-decoration: none;
+        color: white;
+        padding-right: 20px;
+        padding-top: 60px;
         &--icon{
           background-color: black;
           border-radius: 7px;
