--- a/app/views/homes/_side_bar.html.haml
+++ b/app/views/homes/_side_bar.html.haml
@@ -1,9 +1,10 @@
 .side_bar
   .side_bar_box
+    %ul.line__newbtn
+      %li.line__newbtn__li
+        =link_to new_home_path, class: "line__newbtn__li__image" do
+          = icon('far', 'image', class: "line__newbtn__li__image--icon")
     %ul.line__btn
-      %li.line__btn__li
-        =link_to new_home_path, class: "line__btn__li__image" do
-          = icon('far', 'image', class: "line__btn__li__image--icon")
       %li.line__btn__li
         =link_to "https://www.facebook.com/", class: "line__btn__li" do
           = icon('fab', 'facebook-square', class: "line__btn__li--icon fa-rotate-90")
