--- a/app/views/images/_main_home.html.haml
+++ b/app/views/images/_main_home.html.haml
@@ -10,15 +10,16 @@
       %ul.immain_middle--box--ul
         - @home.each do |home|
           %li.immain_middle--box--ul--li
-            = link_to "#", class: "immain_middle--box--ul--li--link" do
+            .immain_middle--box--ul--li--link
               .immain_middle--box--ul--li--link--content
-                .immain_middle--box--ul--li--link--content--top
-                  %span.immain_middle--box--ul--li--link--content--top--name
-                    @ #{home.user.name}
-                  %span.immain_middle--box--ul--li--link--content--top--like
-                    いいね
-                .immain_middle--box--ul--li--link--content--text
-                  = home.text
+                = link_to home_path(home), class: "immain_middle--box--ul--li--link--content--a" do
+                  .immain_middle--box--ul--li--link--content--a--top
+                    %span.immain_middle--box--ul--li--link--content--a--top--name
+                      @ #{home.user.name}
+                    %span.immain_middle--box--ul--li--link--content--a--top--like
+                      いいね
+                  .immain_middle--box--ul--li--link--content--a--text
+                    = home.text
                 .immain_middle--box--ul--li--link--content--photo
                   - home.images.first(5).each do |image|
                     .immain_middle--box--ul--li--link--content--photo--box
