--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
     %meta{content: "width=device-width,initial-scale=1.0", name: "viewport"}
     %title Homelife
     = csrf_meta_tags
-    -# = csp_meta_tag
+    = csp_meta_tag
     -# = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     -# = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     = stylesheet_link_tag    'application', media: 'all'
