--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -3,12 +3,11 @@
 }
 
 .header {
-  // opacity: 0.9;
   height: 60px;
   width: 100%;
   background-color: white;
   position: fixed;
-  z-index: 1;
+  z-index: 21;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,7 +19,6 @@
     width: 100%;
     background-color: white;
     position: fixed;
-    z-index: 1;
   }
   .header-left{
     align-items: center;
@@ -167,6 +165,7 @@
       position: absolute;
       width: 100%;
       .navbar__menu{
+        z-index: 18;
         position: absolute;
         margin-top: 20px;
         padding-bottom: 5px;
@@ -497,14 +496,17 @@
     flex: 1;
     position: relative;
     .main_image{
-      min-height: 550px;
+      min-height: 750px;
       width: -webkit-fill-available;
       background: image-url("mayhome.png");
       background-size: contain;
       background-position: center center;
       background-repeat: no-repeat;
       position: absolute;
-      top: 13%;
+      top: 6%;
+      @media screen and (max-width : 560px){
+        top: 1%;
+      }
     }
     .main_title{
       position: absolute;
@@ -519,10 +521,22 @@
         letter-spacing: 10px;
         margin-left: 40px;
         #top{
-          font-size: 30px;
+          font-size: 60px;
+          @media screen and (max-width : 815px){
+            font-size: 40px;
+          }
+          @media screen and (max-width : 590px){
+            font-size: 30px;
+          }
         }
         #bottom{
-          font-size: 20px;
+          font-size: 40px;
+          @media screen and (max-width : 815px){
+            font-size: 28px;
+          }
+          @media screen and (max-width : 590px){
+            font-size: 20px;
+          }
         }
       }
     }
