--- a/app/views/accounts/_header.html.haml
+++ b/app/views/accounts/_header.html.haml
@@ -21,7 +21,7 @@
         =link_to destroy_user_session_path, method: :delete, class: "dropdown-item" do
           Log out
         =link_to edit_user_registration_path(current_user), class: "dropdown-item" do
-          Edit account
+          Edit user
   %a.menu
     %span.menu__line.menu__line--top
     %span.menu__line.menu__line--center
