--- a/app/assets/stylesheets/_user.scss
+++ b/app/assets/stylesheets/_user.scss
@@ -9,7 +9,6 @@ body{
 }
 h2{
   color: #6D7781;
-  // font-family: 'Sofia', cursive;
   font-size: 15px;
   font-weight: bold;
   font-size: 3.6em;
@@ -26,6 +25,17 @@ a{
   top: 10%;
   left: 50%;
   margin-left: -175px;
+  .formname{
+    margin: 30px 0;
+  }
+  .linkname{
+    text-decoration: none;
+    color: #1c70c9;
+    &:hover{
+      border-bottom: 1px solid #435160;
+    }
+  }
+  
   .btn {
     margin-top: 20px;
     color: #fff;
@@ -33,6 +43,7 @@ a{
     font-size: 14px;
   }
   .login-form{
+    margin: 30px 0;
     .field {
       margin-bottom: 10px;
   
@@ -65,6 +76,11 @@ a{
       }
     }
 
+    .actions{
+      &:hover{
+        opacity: 0.7;
+      }
+    }
     #agree:checked ~ label[for='agree']{
       background: #435160;
     }
@@ -81,6 +97,7 @@ a{
       &:hover{
         background: black;
         animation-name: shake;
+        text-decoration: none;
       }
     }
     .forgot{
@@ -101,6 +118,7 @@ a{
         text-align: center;
         font-weight: bold;
         color: #6D7781;
+        text-decoration: none;
       }
     .agree{
       padding: 30px 0px;
@@ -120,6 +138,11 @@ a{
 }
 
 .field-label {
+  .fieldpoint{
+    width: 164px;
+    height: 25px;
+    color: black;
+  }
   .field_with_errors {
     display: inline-block;
     color: #d65f4c;
