--- a/app/views/abouts/_header.html.haml
+++ b/app/views/abouts/_header.html.haml
@@ -5,51 +5,104 @@
       = button_tag type: "button", class: "searchbtn", id: "submit" do
         = icon('fas', 'search', class: 'searchbtn--icon')
     -# %ul#list
-  .header-right
-    
-    .titleab
-      About
-    .username
-      @#{current_user.name}
-    .dropdown
-      %a.dropdown-toggle{href: "#", role: "button", id: "dropdownMenuLink",
-                          data: {toggle: "dropdown"},
-                          aria: {haspopup: "true",
-                                expanded: "false"}}
-        User Menu
-      .dropdown-menu{aria: {labelledby: "dropdownMenuLink"}}
-        =link_to destroy_user_session_path, method: :delete, class: "dropdown-item" do
-          Log out
-        =link_to edit_user_registration_path(current_user), class: "dropdown-item" do
-          Edit account
-  %a.menu
-    %span.menu__line.menu__line--top
-    %span.menu__line.menu__line--center
-    %span.menu__line.menu__line--bottom
-  %nav.navbar
+  - if user_signed_in?
+    .header-right
+      
+      .titleab
+        About
+      .username
+        @#{current_user.name}
+      .dropdown
+        %a.dropdown-toggle{href: "#", role: "button", id: "dropdownMenuLink",
+                            data: {toggle: "dropdown"},
+                            aria: {haspopup: "true",
+                                  expanded: "false"}}
+          User Menu
+        .dropdown-menu{aria: {labelledby: "dropdownMenuLink"}}
+          =link_to destroy_user_session_path, method: :delete, class: "dropdown-item" do
+            Log out
+          =link_to edit_user_registration_path(current_user), class: "dropdown-item" do
+            Edit user
+    %a.menu
+      %span.menu__line.menu__line--top
+      %span.menu__line.menu__line--center
+      %span.menu__line.menu__line--bottom
+    %nav.navbar
 
-    %button.navbar-toggler{type: "button",
-                          data: {toggle: "collapse",
-                                  target: "#navbarMenu"},
-                          aria: {controls: "navbarMenu",
-                                  expanded: "false",
-                                  label: "Toggle navigation"}}
-    .navbar__wrap
-      %ul.navbar__menu
-        %li.navbar__menu--box
-          =link_to abouts_path, class: "navbar__menu--box--about" do
-            About
-        %li.navbar__menu--box
-          =link_to accounts_path, class: "navbar__menu--box--accounts" do
-            Instagramer一覧
-        %li.navbar__menu--box
-          =link_to "#", class: "navbar__menu--box--news" do
-            News
-        %li.navbar__menu--box
-          =link_to homes_indexes_path, class: "navbar__menu--box--users" do
-            投稿一覧
-        %li.navbar__menu--box
-          =link_to root_path, class: "navbar__menu--box--top" do
-            Top
-        
-      .hero
+      %button.navbar-toggler{type: "button",
+                            data: {toggle: "collapse",
+                                    target: "#navbarMenu"},
+                            aria: {controls: "navbarMenu",
+                                    expanded: "false",
+                                    label: "Toggle navigation"}}
+      .navbar__wrap
+        %ul.navbar__menu
+          %li.navbar__menu--box
+            =link_to abouts_path, class: "navbar__menu--box--about" do
+              About
+          %li.navbar__menu--box
+            =link_to accounts_path, class: "navbar__menu--box--accounts" do
+              Instagramer一覧
+          %li.navbar__menu--box
+            =link_to "#", class: "navbar__menu--box--news" do
+              News
+          %li.navbar__menu--box
+            =link_to homes_indexes_path, class: "navbar__menu--box--users" do
+              投稿一覧
+          %li.navbar__menu--box
+            =link_to root_path, class: "navbar__menu--box--top" do
+              Top
+          
+        .hero
+  - else
+    .header-right
+      
+      .titleab
+        About
+      .username
+      .dropdown
+        %a.dropdown-toggle{href: "#", role: "button", id: "dropdownMenuLink",
+                            data: {toggle: "dropdown"},
+                            aria: {haspopup: "true",
+                                  expanded: "false"}}
+          User Menu
+        .dropdown-menu{aria: {labelledby: "dropdownMenuLink"}}
+          =link_to destroy_user_session_path, method: :delete, class: "dropdown-item" do
+            Log out
+          =link_to new_user_session_path, class: "dropdown-item" do
+            Log in
+          =link_to edit_user_registration_path(current_user), class: "dropdown-item" do
+            Edit user
+          =link_to new_user_registration_path, class: "dropdown-item" do
+            Create user
+    %a.menu
+      %span.menu__line.menu__line--top
+      %span.menu__line.menu__line--center
+      %span.menu__line.menu__line--bottom
+    %nav.navbar
+
+      %button.navbar-toggler{type: "button",
+                            data: {toggle: "collapse",
+                                    target: "#navbarMenu"},
+                            aria: {controls: "navbarMenu",
+                                    expanded: "false",
+                                    label: "Toggle navigation"}}
+      .navbar__wrap
+        %ul.navbar__menu
+          %li.navbar__menu--box
+            =link_to abouts_path, class: "navbar__menu--box--about" do
+              About
+          %li.navbar__menu--box
+            =link_to new_user_session_path, class: "navbar__menu--box--accounts" do
+              Instagramer一覧
+          %li.navbar__menu--box
+            =link_to new_user_session_path, class: "navbar__menu--box--news" do
+              News
+          %li.navbar__menu--box
+            =link_to new_user_session_path, class: "navbar__menu--box--users" do
+              投稿一覧
+          %li.navbar__menu--box
+            =link_to root_path, class: "navbar__menu--box--top" do
+              Top
+          
+        .hero
