--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,6 +1,7 @@
 .login
-  %h2 HomeLife
-  %h4 Edit Account
+  = link_to root_path, class: "" do
+    %h2 HomeLife
+  %h4.formname Edit User
   = link_to "トップページに戻る", :back, class: 'btn'
   .login-form
     = form_for(current_user) do |f|
