--- a/app/assets/stylesheets/_about.scss
+++ b/app/assets/stylesheets/_about.scss
@@ -320,7 +320,7 @@
   display: flex;
   flex-direction: column;
   background-color: white;
-  overflow: scroll;
+  // overflow: scroll;
   position: relative;
   flex: 1;
   min-height: 100vh;
