--- a/app/assets/stylesheets/_user.scss
+++ b/app/assets/stylesheets/_user.scss
@@ -3,9 +3,9 @@
   padding: 0;
 }
 body{
-  background: white;
-  color: #435160;
-  font-family: 'Open Sans', sans-serif;
+  // background: white;
+  // color: #435160;
+  // font-family: 'Open Sans', sans-serif;
 }
 h2{
   color: #6D7781;
