--- a/app/assets/stylesheets/_newhome.scss
+++ b/app/assets/stylesheets/_newhome.scss
@@ -8,6 +8,8 @@
   line-height: 1;
   @media screen and (max-width : 700px){
     width: 700px;
+    height: 1700px;
+    padding: 150px 60px 20px 60px;
   }
 }
 .bodynew .effect-scroll{
@@ -27,7 +29,9 @@
     margin: 0 auto;
     background-color: #f0f0f0;
     padding: 40px 0 0 0;
-    
+    @media screen and (max-width : 700px){
+      width: auto;
+    }
     &--logo {
       margin: 0 auto;
       background-image: image-url("fmarket_logo_red.svg") ;
@@ -45,13 +49,13 @@
     background: #fff;
     display: block;
     margin: 0 auto 20px;
-    max-width: 700px;
+    width: 700px;
     border-radius: 40px;
     background: #f0f0f0;
     box-shadow: -2px -2px 5px rgba(255, 255, 255, 1),
                 3px 3px 5px rgba(0, 0, 0, 0.1);
     @media screen and (max-width : 700px){
-      margin: 150px 60px 20px 60px;
+      width: auto;
     }
     &--top{
       padding: 32px 16px;
@@ -302,6 +306,9 @@
     padding: 40px 0;
     text-align: center;
     background-color: #f0f0f0;
+    @media screen and (max-width : 700px){
+      width: auto;
+    }
     &__list{
       &--ul{
         &--li{
