--- a/app/assets/stylesheets/_newhome.scss
+++ b/app/assets/stylesheets/_newhome.scss
@@ -7,9 +7,9 @@
   color: #333;
   line-height: 1;
   @media screen and (max-width : 700px){
-    width: 700px;
-    height: 1700px;
-    padding: 150px 60px 20px 60px;
+    width: auto;
+    height: 1400px;
+    padding: 0 20px;
   }
 }
 .bodynew .effect-scroll{
@@ -67,7 +67,7 @@
       border-bottom: thin solid #f5f5f5;
     }
     &--bottom{
-      // 出品画像
+      // 画像
       &--image{  
         padding: 40px 2.5%;
       }
@@ -117,10 +117,13 @@
       }
 
 
-      // 商品名前　&　説明
+      // テキスト欄
       &--name{
         padding: 40px;
         border-top: 1px solid #eee;
+        @media screen and (max-width : 700px){
+          padding: 10px;
+        }
         &__name{
           margin: 40px 0 0;
         }
@@ -129,89 +132,6 @@
         }
       }
 
-      // 商品詳細
-      &--category{
-        padding: 40px;
-        border-top: 1px solid #eee;
-      }
-      .add-item-details{
-        &__category{
-          margin: 40px 0 0;
-
-        }
-        &__condition{
-          margin: 40px 0 0;
-        }
-        &__size{
-          margin: 40px 0 0;
-        }
-        &__brand{
-          margin: 40px 0 0;
-        }
-      }
-      // 配送
-      &--delivery{
-        padding: 40px;
-        border-top: 1px solid #eee;
-        &--form-box{
-          margin: 40px 0 0;
-
-          &__way{
-            margin: 40px 0 0;
-          }
-          &__region{
-            margin: 40px 0 0;
-          }
-          &__date{
-            margin: 40px 0 0;
-          }
-        }
-      }
-
-      // 販売価格
-      &--value{
-        padding: 40px;
-        border-top: 1px solid #eee;
-        border-bottom: thin solid #f5f5f5 ;
-        &--form-box{
-          margin: 40px 0 0;
-          &__value{
-            display: flex;
-            justify-content:space-between;
-            align-items: center;
-            padding: 0 0 24px;
-            border: 0;
-            &__left{
-
-            }
-            &__right{
-              display: flex;
-              align-items: center;
-              &--form{
-                margin: 0 0 0 5%;             
-              }
-            }
-          }
-          &__commission{
-            display: flex;
-            justify-content:space-between;
-            align-items: center;
-            padding: 0 0 24px;
-            border: 0; 
-            padding: 24px 0;
-            border-top: 1px solid #ccc;
-          }
-          &__profit{
-            display: flex;
-            justify-content:space-between;
-            align-items: center;
-            padding: 0 0 24px;
-            border: 0; 
-            padding: 24px 0;
-            border-top: 1px solid #ccc;
-          }
-        }
-      }
       &--btn{
         padding: 40px;
         border-top: 1px solid #eee;
@@ -255,7 +175,7 @@
           justify-content: center;
           margin: 40px 25px 15px;
           &__red-btn{
-            margin: 0 40px;
+            margin-left: 20px;
             background: black;
             border: 1px solid black;
             border-radius: 20px;
@@ -276,6 +196,7 @@
           &__gray-btn{
             width: 80px;
             margin: 0 40px;
+            margin-right: 20px;
             background: #aaa;
             border: 1px solid #aaa;
             border-radius: 20px;
