--- a/app/views/homes/edit.html.haml
+++ b/app/views/homes/edit.html.haml
@@ -52,7 +52,7 @@
               %li.add-home__main--bottom--btn__ul__gre
               %li.add-home__main--bottom--btn__ul__blu
             .add-home__main--bottom--btn__box
-              = f.submit '投稿する', class: 'add-home__main--bottom--btn__box__red-btn'
+              = f.submit '編集する', class: 'add-home__main--bottom--btn__box__red-btn'
               = link_to :back, class: "add-home__main--bottom--btn__box__gray-btn" do
                 もどる
       .add-home__footer
