--- a/app/views/images/_main_home.html.haml
+++ b/app/views/images/_main_home.html.haml
@@ -18,6 +18,7 @@
                       @ #{home.user.name}
                     %span.immain_middle--box--ul--li--link--content--a--top--like
                       いいね
+                      = icon('far', 'heart', class: "line__newbtn__li__image--icon")
                   .immain_middle--box--ul--li--link--content--a--text
                     = home.text
                 .immain_middle--box--ul--li--link--content--photo
