--- a/app/assets/stylesheets/_home-indexes.scss
+++ b/app/assets/stylesheets/_home-indexes.scss
@@ -217,21 +217,21 @@
                   &--name{
                     font-size: 12px;
                     height: 30px;
+                    line-height: 30px;
                   }
                   &--like{
                     font-size: 10px;
                     height: 30px;
+                    line-height: 30px;
                     width: 60px;
                   }
                 }
                 &--text{
                   font-size: 12px;
                   height: 70px;
-                  background-color: whitesmoke;
-                  box-shadow: 0 0 5px 0 rgba(0,0,0,.12), 0 2px 5px 0 rgba(0,0,0,.22);
-                  border-radius: 5px;
                   margin: 0 6px;
                   padding: 7px;
+                  border-top: 2px solid #f5f5f5;
                 }
                 &:hover{
                   background-color: black;
