--- a/app/assets/stylesheets/_showhome.scss
+++ b/app/assets/stylesheets/_showhome.scss
@@ -60,45 +60,119 @@
                 cursor: pointer;
                 &--top{
                   font-size: 12px;
-                  height: 20px;
+                  height: 40px;
                   margin: 7px;
                   display: flex;
-                  justify-content: space-between;
+                  justify-content: space-around;
                   text-align: center;
+                  align-items: center;
                   &--name{
                     font-size: 12px;
                     height: 30px;
+                    line-height: 30px;
+                  }
+                  #modal-open-btn{
+                    background-color: rgb(100, 100, 100);
+                    box-shadow: 0 2px 10px 0 #9E9E9E;
+                    color: white;
+                  }
+                  #item-delete-btn{
+                      text-decoration: none;
+                  }
+                  #overlay{
+                    //モーダルウィンドウの背景を設定
+                    width: 100%;
+                    height: 100%;
+                    position: fixed;
+                    top: 0;
+                    left: 0;
+                    background: rgba(0, 0, 0, 0.3);
+                    display: none;
+                    z-index: 1;
+                  }
+                  #modalmac{
+                    // モーダルウィンドウの画面を設定(高さ・幅は調整ください)
+                    width: 500px;
+                    height: 200px;
+                    position: absolute;
+                    top: 20%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    background-color: white;
+                    z-index: 2;
+                    display: flex;
+                    flex-wrap: wrap;
+                    justify-content: space-between;
+              
+                    .modal-message-box {
+                      width: 100%;
+                      height: calc(100% - 60px);
+                      text-align: center;
+                      display: flex;
+                      flex-direction: column;
+                      justify-content: space-around;
+                    }
+                    .modal-message-bottom{
+                      width: 100%;
+                      display: flex;
+                      button {
+                        width: 50%;
+                          height: 60px;
+                        a{
+                          text-decoration: none;
+                          color: black;
+                          width: 50%;
+                          height: 60px;
+                          font-size: 16px;
+                        }
+                      
+                      }
+                    
+                      #delete-comformation-btn {
+                        a{
+                          width: 50%;
+                          height: 60px;
+                        }
+                      }
+                    }
+                  }
+                  .item-delete-btn {
+                    //削除ボタンの非表示
+                    width: 0;
+                    height: 0;
+                    margin: 0;
+                    padding: 0;
+                    border: 0;
                   }
                   &--like{
                     font-size: 10px;
                     height: 30px;
+                    line-height: 30px;
                     width: 60px;
                   }
                 }
                 &--text{
                   font-size: 12px;
                   height: 70px;
-                  background-color: whitesmoke;
-                  box-shadow: 0 0 5px 0 rgba(0,0,0,.12), 0 2px 5px 0 rgba(0,0,0,.22);
-                  border-radius: 5px;
                   margin: 0 6px;
                   padding: 7px;
+                  border-top: 2px solid #f5f5f5;
                 }
               }
               &--photo{
                 height: 170px;
                 width: 100%;
                 &--box{
-                  height: 60px;
+                  height: 40px;
                   padding: 3px 7px;
                   &--subimg{
                     padding: 1px 7px 0;
                     width: 70px;
-                    height: 60px;
+                    height: 50px;
                   }
                 }
                 &--top{
-                  padding: 5px 28px;
+                  padding: 25px 55px 5px 55px;
                   height: 510px;
                   @media screen and (max-width : 700px){
                     height: 220px;
