--- a/app/assets/stylesheets/_home-indexes.scss
+++ b/app/assets/stylesheets/_home-indexes.scss
@@ -203,39 +203,39 @@
             &--content{
               font-size: 13px;
               height: 100%;
+              &--top{
+                font-size: 12px;
+                height: 20px;
+                margin: 7px;
+                display: flex;
+                justify-content: space-between;
+                text-align: center;
+                &--name{
+                  font-size: 12px;
+                  height: 30px;
+                  line-height: 30px;
+                }
+                &--like{
+                  font-size: 10px;
+                  height: 30px;
+                  line-height: 30px;
+                  width: 60px;
+                }
+              }
               &--a{
                 text-decoration: none;
                 color: black;
                 cursor: pointer;
-                &--top{
-                  font-size: 12px;
-                  height: 20px;
-                  margin: 7px;
-                  display: flex;
-                  justify-content: space-between;
-                  text-align: center;
-                  &--name{
-                    font-size: 12px;
-                    height: 30px;
-                    line-height: 30px;
-                  }
-                  &--like{
-                    font-size: 10px;
-                    height: 30px;
-                    line-height: 30px;
-                    width: 60px;
-                  }
-                }
                 &--text{
                   font-size: 12px;
                   height: 70px;
                   margin: 0 6px;
                   padding: 7px;
                   border-top: 2px solid #f5f5f5;
-                }
-                &:hover{
-                  background-color: black;
-                  opacity: 0.7;
+                  &:hover{
+                    background-color: whitesmoke;
+                    opacity: 0.5;
+                  }
                 }
               }
               &--photo{
