--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,7 @@
 @import "./home-indexes";
 @import "./newhome";
 @import "./showhome";
+@import "./likes";
 @import "font-awesome-sprockets";
 @import "./font-awesome";
 @import "bootstrap";
