--- a/app/views/homes/new.html.haml
+++ b/app/views/homes/new.html.haml
@@ -20,22 +20,25 @@
                   %span 必須
               .upload__text--text
                 最大6枚までアップロードできます
-              
+
               .upload__image
                 .previews
                   - if @home.persisted?
                     - @home.images.each_with_index do |image, i|
-                      = image_tag image.url.url, data: { index: i }, width: "100", height: '100'
+                      = image_tag image.url.url, data: { index: i }, width: "100", height: '64'
                 =f.fields_for :images do |image|
                   .js-file_group{"data-index" => "#{image.index}"}
-                    =image.file_field :url, class:'upload__image--icon'
-                    .js-remove 削除
+                    = image.label :url, class: "upload__image--icon", type: "file" do
+                      = icon('fas', 'image', class: "upload__image--icon--i")
+                      = image.file_field :url
+                    .js-remove{style: "width: 50px;"} 削除
                   -if @home.persisted?
                     =image.check_box :_destroy, data:{ index: image.index }, class: 'hidden-destroy'
                 - if @home.persisted?
                   .js-file_group{"data-index" => "#{@home.images.count}"}
-                    = file_field_tag :url, name: "home[images_attributes][#{@home.images.count}][url]", class: 'js-file'
-                    .js-remove 削除
+                    = file_field_tag :url, name: "home[images_attributes][#{@home.images.count}][url]", class: 'upload__image--icon'
+                    .js-remove{style: "width: 50px;"} 削除
+
           .add-home__main--bottom--name
             .add-home__main--bottom--name__name
 
@@ -44,7 +47,11 @@
                 情報入力
                 .form-require
                   %span 必須
-              = f.text_area :text, class: 'textarea-default', placeholder: "皆さんのライフスタイルでの情報など共有してみよう！（マイホームだったら、デザイン性や機能性で気を付けたこと、後悔など）",:rows => "5"
+              = f.text_area :text, class: 'textarea-de', placeholder: "皆さんのライフスタイルでの情報など共有してみよう！（マイホームだったら、デザイン性や機能性で気を付けたこと、後悔など）", :rows => "5", :maxlength => "100"
+              %span#text-count
+                あと
+                %span#num 100
+                文字
           .add-home__main--bottom--btn
             %ul.add-home__main--bottom--btn__ul
               %li.add-home__main--bottom--btn__ul__red
