--- a/app/assets/stylesheets/_home-indexes.scss
+++ b/app/assets/stylesheets/_home-indexes.scss
@@ -232,10 +232,40 @@
                   margin: 0 6px;
                   padding: 7px;
                   border-top: 2px solid #f5f5f5;
+                  word-break: break-all;
+                  position: relative;
+                  overflow: hidden;
+                  p{
+                    margin-bottom: 5px;
+                  }
+                  &:before {
+                    display: block;
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 40px; /*グラデーションで隠す高さ*/
+                    background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,0.9) 50%, rgba(255,255,255,0.9) 50%, #fff 100%);
+                    background: linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,0.9) 50%, rgba(255,255,255,0.9) 50%, #fff 100%);
+                    content: "";
+                  }
+
                   &:hover{
                     background-color: whitesmoke;
                     opacity: 0.5;
                   }
+                  // .grad-btn {
+                  //   /*.grad-btnのCSSは表示/非表示の動作には関係ないので、ご自由にどうぞ。*/
+                  // }
+                  .text-btn{
+                    &:before{
+                      content: "...詳細はクリック";
+                      position: absolute;
+                      top: 50px;
+                      right: 0;
+                    }
+                  }
+
                 }
               }
               &--photo{
