--- a/app/assets/stylesheets/_newhome.scss
+++ b/app/assets/stylesheets/_newhome.scss
@@ -98,15 +98,45 @@
         }
         &__image{
           min-height: 162px;
+          // display: flex;
+          // flex-direction: column;
           background: #f5f5f5;
           border: 1px dashed #ccc;
           text-align: center;
           border-radius: 20px;
+          // position: relative;
+          .previews{
+            // height: 162px;
+            margin: 0 15px 10px 0;
+            // position: relative;
+            height: 60px;
+          }
+          .js-file_group{
+            // position: relative;
+            // right: 80px;
+            // top: 80px;
+            width: 70px;
+            display: inline-block;
+            .js-remove{
+              cursor: pointer;
+            }
+          }
           &--icon{
             // font-size: 100px;
             // color: #aaa;
             // line-height: 250px;
+            // display: none;
+            width: 20px;
+            height: 20px;
+            font-size: 18px;
+            cursor: pointer;
+            input{
+              display: none;
+            }
             transition: 0.3s ease-out;
+            &--i{
+              // position: absolute;
+            }
           }
         }
       }
@@ -310,7 +340,7 @@
   font-size: 16px;
 }
 // テキスト欄
-.textarea-default{
+.textarea-de{
   margin: 8px 0 0;
   display: block;
   width: 100%;
@@ -325,6 +355,16 @@
     border: 1px dashed #ccc;
   }
 }
+#text-count {
+  display: block;
+  text-align: right;
+  margin-top: 10px;
+}
+#text-count.over {
+  font-weight: bold;
+  color: #c90000;
+}
+
 // 色が薄い文
 .sub-head{
   color: #888;
