--- a/app/views/likes/_like.html.haml
+++ b/app/views/likes/_like.html.haml
@@ -1,7 +1,9 @@
 .like_button
   - if current_user.likes.find_by(home_id: @home.id)
-    = link_to "♡", likes_delete_path(home_id: @home.id), {method: "post", remote: true}
+    = link_to likes_delete_path(home_id: @home.id), {method: "post", remote: true}, class: "like_button__delete" do
+      ♡
     = @like_count
   - else
-    = link_to "♡", likes_create_path(home_id: @home.id), {method: "post", remote: true}
+    = link_to likes_create_path(home_id: @home.id), {method: "post", remote: true}, class: "like_button__create" do
+      ♡
     = @like_count
