--- a/app/views/likes/_like.html.haml
+++ b/app/views/likes/_like.html.haml
@@ -1,9 +1,17 @@
-.like_button
+.like_button.count 
   - if current_user.likes.find_by(home_id: @home.id)
-    = link_to likes_delete_path(home_id: @home.id), {method: "post", remote: true}, class: "like_button__delete" do
-      ♡
+    = link_to likes_delete_path(home_id: @home.id), {method: "delete", remote: true}, class: "like_button__delete" do
+      = icon('far', 'heart', class: "like_button__delete--icon")
     = @like_count
   - else
     = link_to likes_create_path(home_id: @home.id), {method: "post", remote: true}, class: "like_button__create" do
-      ♡
+      = icon('fas', 'heart', class: "like_button__create--icon")
     = @like_count
+
+
+  -# - if !home.like_users.include?(current_user)
+  -#   = link_to likes_path(home_id: home.id), method: :post do
+  -#     %i.far.fa-heart.like_button__create--icon
+  -# - else
+  -#   = link_to likes_path(home_id: home.id), method: :delete do
+  -#     %i.fas.fa-heart.like_button__delete--icon
