--- a/app/assets/stylesheets/_home-indexes.scss
+++ b/app/assets/stylesheets/_home-indexes.scss
@@ -220,6 +220,9 @@
                   height: 30px;
                   line-height: 30px;
                   width: 60px;
+                  &--icon{
+                    color: red;
+                  }
                 }
               }
               &--a{
