--- a/app/views/likes/_like.html.haml
+++ b/app/views/likes/_like.html.haml
@@ -1,4 +1,4 @@
-.like_button.count 
+.like_button
   - if current_user.likes.find_by(home_id: @home.id)
     = link_to likes_delete_path(home_id: @home.id), {method: "delete", remote: true}, class: "like_button__delete" do
       = icon('fas', 'heart', class: "like_button__delete--icon")
