--- a/app/assets/stylesheets/_showhome.scss
+++ b/app/assets/stylesheets/_showhome.scss
@@ -6,10 +6,8 @@
   position: relative;
   flex: 1;
   .show_center{
-    // margin-top: 60px;
     display: flex;
     flex-direction: column;
-    // min-height: 550px;
     height: 100%;
     
   }
@@ -78,11 +76,7 @@
                     color: rgb(100, 100, 100);
                     cursor: pointer;
                   }
-                  #modal-open-btn{
-                    // background-color: rgb(100, 100, 100);
-                    // box-shadow: 0 2px 10px 0 #9E9E9E;
-                    // color: white;
-                  }
+                  
                   #item-delete-btn{
                       text-decoration: none;
                   }
@@ -93,7 +87,7 @@
                     position: fixed;
                     top: 0;
                     left: 0;
-                    background: rgba(0, 0, 0, 0.3);
+                    background-color: rgba(0, 0, 0, 0.3);
                     display: none;
                     z-index: 1;
                   }
