--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,5 +8,5 @@
 @import "./showhome";
 @import "./likes";
 @import "font-awesome-sprockets";
-@import "./font-awesome";
+@import "font-awesome";
 @import "bootstrap";
