--- a/app/assets/stylesheets/_newhome.scss
+++ b/app/assets/stylesheets/_newhome.scss
@@ -15,13 +15,8 @@
   opacity: 1;
   transform: translate(0, 0);
 }
-.new_home{
-  // width: 100vw;
-  // height: 100vh;
-}
+
 .add-home{
-  // width: 100vw;
-  // height: 100vh;
   &__header{
     height: 100px;
     width: 700px;
@@ -33,13 +28,11 @@
     }
     &--logo {
       margin: 0 auto;
-      background-image: image-url("fmarket_logo_red.svg") ;
-      background-repeat:no-repeat ;
       width: 185px;
       height: 49px;
       line-height: 49px;
       display: block;
-      :hover{
+      &:hover{
         opacity: 0.5;
       }
     }
@@ -82,7 +75,6 @@
       
     }
     &--bottom{
-      // 画像
       &--image{  
         padding: 40px 2.5%;
       }
@@ -102,17 +94,11 @@
           border: 1px dashed #ccc;
           text-align: center;
           border-radius: 20px;
-          // position: relative;
           .previews{
-            // height: 162px;
             margin: 0 15px 10px 0;
-            // position: relative;
             height: 60px;
           }
           .js-file_group{
-            // position: relative;
-            // right: 80px;
-            // top: 80px;
             width: 70px;
             display: inline-block;
             .js-remove{
@@ -120,10 +106,6 @@
             }
           }
           &--icon{
-            // font-size: 100px;
-            // color: #aaa;
-            // line-height: 250px;
-            // display: none;
             width: 20px;
             height: 20px;
             font-size: 18px;
@@ -132,9 +114,6 @@
               display: none;
             }
             transition: 0.3s ease-out;
-            &--i{
-              // position: absolute;
-            }
           }
         }
       }
@@ -291,9 +270,7 @@
     &__logo{
       width: 80px;
       height: 65px;
-      background-image: image-url("logo_gray.svg");
       display: block;
-      background-repeat:no-repeat ;
       margin:  0 auto;
       &:hover{
         opacity: 0.5 ;
@@ -325,7 +302,7 @@
     }
   }
 }
-// 商品名フォーム
+// フォーム
 .input-default{
   width: 100%;
   margin: 8px 0 0;
