--- a/app/views/homes/show.html.haml
+++ b/app/views/homes/show.html.haml
@@ -21,8 +21,8 @@
                     #overlay
                       #modalmac
                         .modal-message-box
-                          %div 確認
-                          %div 削除すると二度と復活できません。
+                          %div 確認です！
+                          %div 削除すると戻すことができません！
                           %div 本当に削除しますか？
                         .modal-message-bottom
                           %button#modal-colose-btn
