--- a/app/assets/stylesheets/_showhome.scss
+++ b/app/assets/stylesheets/_showhome.scss
@@ -102,7 +102,11 @@
                     display: flex;
                     flex-wrap: wrap;
                     justify-content: space-between;
-              
+                    @media screen and (max-width : 700px){
+                      width: 300px;
+                      font-size: 15px;
+                      border-radius: 10px;
+                    }
                     .modal-message-box {
                       width: 100%;
                       height: calc(100% - 60px);
