--- a/app/views/homes/new.html.haml
+++ b/app/views/homes/new.html.haml
@@ -43,7 +43,7 @@
                 情報入力
                 .form-require
                   %span 必須
-              = f.text_area :text, class: 'textarea-de', placeholder: "皆さんのライフスタイルでの情報など共有してみよう！（マイホームだったら、デザイン性や機能性で気を付けたこと、後悔など）", :rows => "5", :maxlength => "100"
+              = f.text_area :text, class: 'textarea-de', placeholder: "皆さんのライフスタイルでの情報など共有してみよう！（マイホーム関連だったら、デザイン性や機能性で気を付けたこと、後悔したことなど）", :rows => "5", :maxlength => "100"
               %span#text-count
                 
                 %span#num 1000
