--- a/app/assets/stylesheets/_showhome.scss
+++ b/app/assets/stylesheets/_showhome.scss
@@ -121,6 +121,7 @@
                       #modal-colose-btn{
                         width: 50%;
                         height: 60px;
+                        background-color: white;
                         a{
                           text-decoration: none;
                           color: black;
@@ -134,6 +135,7 @@
                       #delete-comformation-btn {
                         width: 50%;
                         height: 60px;
+                        background-color: white;
                         a{
                           text-decoration: none;
                           color: black;
