--- a/app/assets/stylesheets/_showhome.scss
+++ b/app/assets/stylesheets/_showhome.scss
@@ -122,6 +122,7 @@
                         width: 50%;
                         height: 60px;
                         background-color: white;
+                        border-color: whitesmoke;
                         a{
                           text-decoration: none;
                           color: black;
@@ -136,6 +137,7 @@
                         width: 50%;
                         height: 60px;
                         background-color: white;
+                        border-color: whitesmoke;
                         a{
                           text-decoration: none;
                           color: black;
